src/objects/SFO_Fields__c.object
<CustomObject>
    <fields>
        <fullName>Field_Data_Type__c</fullName>
        <label>Field Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Formula</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                    <isActive>false</isActive>
                    <label>Checkbox</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                    <isActive>false</isActive>
                    <label>Date</label>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                    <isActive>false</isActive>
                    <label>Date/Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Length__c</fullName>
        <inlineHelpText>Enter the maximum length for a text field</inlineHelpText>
        <label>Field Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formula_Editor__c</fullName>
        <inlineHelpText>Shows the formula that is defined by the user while creating a dynamic field. Accepts simple formula i.e. single parentheses and Order of calculation followed is BOD MAS</inlineHelpText>
        <label>Formula Editor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Only Active Dynamic fields will be available for selection at Special Feature level (Level 4)</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Entries__c</fullName>
        <inlineHelpText>Allow users to select a value from a predefined list</inlineHelpText>
        <label>Picklist Entries</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Always require a value in this field in order to save a record</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Dynamic Field</label>
    <listViews>
        <fullName>Active</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Formula</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Data_Type__c</field>
            <operation>equals</operation>
            <value>Formula</value>
        </filters>
        <label>Formula</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>In_Active</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>In Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Number</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Data_Type__c</field>
            <operation>equals</operation>
            <value>Text,Number</value>
        </filters>
        <label>Number</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Picklist</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Data_Type__c</field>
            <operation>equals</operation>
            <value>Picklist</value>
        </filters>
        <label>Picklist</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Text</fullName>
        <columns>NAME</columns>
        <columns>Field_Data_Type__c</columns>
        <columns>Field_Length__c</columns>
        <columns>Picklist_Entries__c</columns>
        <columns>Required__c</columns>
        <columns>IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Field_Data_Type__c</field>
            <operation>equals</operation>
            <value>Text</value>
        </filters>
        <label>Text</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Field Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Field_Length</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Field_Data_Type__c,&apos;Text&apos; ), ISBLANK( Field_Length__c ) )</errorConditionFormula>
        <errorDisplayField>Field_Length__c</errorDisplayField>
        <errorMessage>Field Length is required for Field Type Text</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Formula_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Field_Data_Type__c,&apos;Formula&apos; ), ISBLANK( Formula_Editor__c ) )</errorConditionFormula>
        <errorDisplayField>Formula_Editor__c</errorDisplayField>
        <errorMessage>You must enter formula</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Picklist_entries_are_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Field_Data_Type__c, &apos;Picklist&apos;),  ISBLANK( Picklist_Entries__c ) )</errorConditionFormula>
        <errorDisplayField>Picklist_Entries__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>